--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "strict": true
+        "strict": true,
+        "noFallthroughCasesInSwitch": true
     },
     "exclude": [
         "node_modules"
