Extremely basic Pulse+Triangle APU implemented

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-src/core/bits.js
-src/core/ines.js
-src/core/memory.js
-src/core/nes.js
-src/core/ppu.js
-src/util/bits.js
-src/util/util.js
-src/core/6502.js
+src/core/*.js
+src/util/*.js
 
 src/disassembler.js
 src/nes-handler.js
+
+src/**/*.nes
